[fix] #161 운송 로그 조회 시 필요 값 누락 추가